--- a/mainpage.css
+++ b/mainpage.css
@@ -181,7 +181,7 @@ body{
 }
 
 @media (max-width: 768px){
-    body{
+    *{
         overflow-x: hidden;
     }
     .topcontainer{
@@ -194,9 +194,18 @@ body{
 
     .buttonlist{
         left: 80px;
+        overflow-x: scroll !important;
         width: 80vw;
         text-decoration: none;
         top: 5px;
+    }
+
+    .buttonlist button{
+        width: 25vw;
+        font-size: 85%;
+        align-items: center;
+        text-align: left;
+        justify-content: left;
     }
 
     .bottombar{
@@ -212,5 +221,77 @@ body{
         width: 80vw;
         height: 50%;
         left: 10%;
+    }
+    #toptext{
+        width: 80%;
+        left: 10%;
+        position: absolute;
+    }
+
+    #dudeimg{
+        display: none;
+    }
+
+    .lettercontent{
+        width: 90vw;
+        left: 5%;
+        top: 105vh;
+    }
+    .lettercontent h3{
+        width: 100%;
+    }
+
+    .bottombar{
+        width: 100vw;
+    }
+
+    .bottombar h3{
+        left: 5%;
+        width: 40%;
+        font-size: 100%;
+        text-align: left;
+        overflow-x: scroll;
+        justify-content: left;
+    }
+
+    .bottombar img{
+        width: 40%;
+        left: 58%;
+        height: 80%;
+        top: 10%;
+    }
+
+    .contentinfohome{
+        top: 48vh;
+        height: 50vh;
+        width: 85vw;
+        left: 7.5%;
+    }
+
+    #toptext{
+        width: 80vw;
+        left: 10vw;
+        position: absolute;
+        justify-content: center;
+        font-size: 100%;
+    }
+
+    .publicimg h1{
+        width: 80vw;
+        left: 10%;
+        font-size: 280%;
+        height: 50%;
+        justify-content: center;
+        top: 30%;
+        position: absolute;
+    }
+
+    #bottomtext{
+        display: none;
+    }
+
+    .contentinfohome h3{
+        top: 8%;
+        font-size: 120%;
     }
 }
