--- a/indexstyle.css
+++ b/indexstyle.css
@@ -6,19 +6,20 @@
 
 body{
     justify-content: center;
-    background-image: url("imgwebsite/backgroundnew.png");
+    background-image: url("imgwebsite/backgroundgrad.png");
     background-repeat: no-repeat;
     background-size: cover;
     overflow-y: auto;
 }
 
 #logo{
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     position: absolute;
     display: flex;
     left: 50%;
-    margin-top: 8vh;
+    margin-top: 5vh;
+    background-color: #2e2e2e;
     box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.5);
     border-radius: 100%;
     transform: translateX(-50%);
@@ -27,8 +28,9 @@ body{
 #heading{
     position: absolute;
     width: 50vw;
-    top: 31.5%;
+    top: 25vh;
     left: 25vw;
+    color: #fff;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -36,75 +38,141 @@ body{
 
 .buttonlist{
     width: 42.5vw;
-    height: 55vh;
+    height: 60vh;
     justify-content: center;
     position: absolute;
     left: 28.75vw;
-    top: 40%;
+    top: 32.5%;
     align-items: center;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
 }
-
+#ow{
+    margin-top: 65%;
+}
 .buttonlist button{
     display: flex;
     width: 95%;
-    height: 20%;
+    min-height: 20%;
+    padding: 20px 0px;
+    box-sizing: border-box;
+    max-height: 50%;
     margin-bottom: 5%;
     align-items: center;
     cursor: pointer;
-    background-color: #27873a;
+    background-color: #45434f;
     border-radius: 6px;
     font-size: 130%;
-    box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.5);
+    box-shadow: 1px 1px 3px rgba(255, 255, 255, 0.3);
     color: #fff;
     font-weight: 300px;
     border: none;
     transition: 0.35s;
     text-decoration: none;
     justify-content: center;
+    text-align: center;
 }
 
 #atr{
     display: none;
 }
 
+.sociallinks{
+    width: 10vw;
+    height: 50px;
+    overflow: hidden;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: 89%;
+    top: 90%;
+}
+
+.sociallinks img{
+    cursor: pointer;
+    position: absolute;
+    width: 50px;
+    display: flex;
+    height: 50px;
+}
+
+#instabutton{
+    left: 0%;
+}
+
+#gmailbutton{
+    left: 50%
+}
+
 .buttonlist button:hover{
     padding: 10px 5px;
     font-size: 150%;
+    box-shadow: 2px 2px 6px rgba(255, 255, 255, 0.45);
 }
 
 #mologo{
     display: none;
     margin: 10px 5px;
 }
-
+::-webkit-scrollbar-thumb{
+    background-color: #2e2e2e;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #2e2e2e;
+}
+::-webkit-scrollbar-corner{
+    background-color: #2e2e2e;
+}
 @media (max-width: 768px){
     .buttonlist{
         width: 85vw;
         left: 7.5vw;
     }
 
+    #ow{
+        margin-top: 45%;
+    }
+
+    .buttonlist button{
+        min-height: 15%;
+    }
+
     #mologo{
         display: block;
         opacity: 0.6;
+        color: #fff;
     }
 
     #heading{
-        width: 90vw;
-        left: 5vw;
+        width: 95vw;
+        left: 2.5vw;
         text-align: center;
-        font-size: 160%;
+        font-size: 120%;
     }
     body{
         background-color: #fff;
-        background-image: url("imgwebsite/phonewallpaper.png");
         background-size: cover;
+        background-position: center center;
         background-repeat: no-repeat;
         background-attachment: fixed;
     }
     #heading{
         width: 80vw;
         left: 10vw;
+    }
+
+    .sociallinks{
+        width: 25vw;
+        height: 15vw;
+        position: absolute;
+        left: 73.5%;
+        top: 5px;
+    }
+
+    .sociallinks img{
+        width: 30px;
+        height: 30px;
     }
 }
