--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: "Poppins",sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 body{
@@ -61,10 +61,35 @@ body{
     margin-bottom: 5%;
     align-items: center;
     cursor: pointer;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: #45434f;
     border-radius: 6px;
     font-size: 130%;
-    box-shadow: 1px 1px 3px rgba(255, 255, 255, 0.3);
+    box-shadow: 1px 1px 3px rgba(255, 255, 255, 0.2);
+    color: #fff;
+    font-weight: 300px;
+    border: none;
+    transition: 0.35s;
+    text-decoration: none;
+    justify-content: center;
+    text-align: center;
+}
+
+.buttonlist a{
+    display: flex;
+    width: 95%;
+    min-height: 20%;
+    padding: 20px 0px;
+    box-sizing: border-box;
+    max-height: 50%;
+    margin-bottom: 5%;
+    align-items: center;
+    cursor: pointer;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: #45434f;
+    border-radius: 6px;
+    font-size: 130%;
+    box-shadow: 1px 1px 3px rgba(255, 255, 255, 0.2);
     color: #fff;
     font-weight: 300px;
     border: none;
