--- a/indexstyle.css
+++ b/indexstyle.css
@@ -46,7 +46,7 @@ body{
     position: absolute;
     left: 28.75vw;
     top: 32.5%;
-    align-items: center;
+    align-items: flex-start;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
